--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body { 
 margin: 0;
-padding: 0; 
+padding: 20px; 
 background: #f5f5f5;
 color: #333;
 line-height: 24px;
@@ -14,7 +14,7 @@ a:hover { color: #880000; }
 #wrap { 
 margin: 0 auto;
 width: 100%;
-max-width: 1200px;
+max-width: 1000px;
 }
 
 #header {
